<resources>
    <string name="app_name">iID</string>

    <string name="subscription_key">6a258339e51b49828cd52e10094a583f</string>
    <string name="endpoint">https://westeurope.api.cognitive.microsoft.com/face/v1.0</string>

    <!--
    <string name="subscription_key">27a2c146c96f4355a83ba3ddec3a394c</string>
    <string name="endpoint">https://westcentralus.api.cognitive.microsoft.com/face/v1.0</string>
    -->

    <string name="sign_in">Sign In</string>
    <string name="register">Register</string>
    <string name="username">User name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="password_confirm">Confirm password</string>
    <string name="signing_in">Signing in</string>
    <string name="loading_profile">Loading profile</string>
    <string name="registering">Registering</string>
    <string name="accept">Accept</string>
    <string name="decline">Decline</string>

    <string name="label_username">Name  :</string>
    <string name="label_dob">D.O.B. :</string>
    <string name="label_status_invalid">Invalid</string>
    <string name="label_status_advisory">Advisory</string>
    <string name="label_time_left">Time left: %d </string>

    <string name="label_user_name">User name:</string>
    <string name="label_user_dob">DOB:</string>
    <string name="label_user_id">User ID:</string>
    <string name="label_id">ID:</string>

    <string name="prompt_qr_scan">Scan ID QR - Code</string>

    <string name="err_empty_username">User name is empty</string>
    <string name="err_empty_email">Email is empty</string>
    <string name="err_empty_password">Password is empty</string>
    <string name="err_passwords_not_match">Passwords not match</string>
    <string name="err_connection">Unable to connect to the server</string>
    <string name="err_login_failed">Login request failed</string>
    <string name="err_register_failed">Registration request failed</string>
    <string name="err_face_not_detected">Unable to detect face on photo</string>
    <string name="err_detection">Face detection request failed</string>
    <string name="err_location_permissions">Location is not available, please grant location permissions</string>
    <string name="err_location_disabled">Location access is disabled, please enable access in device settings</string>
    <string name="err_failed_to_load_qr">Failed to load QR code</string>
    <string name="err_qr_invalid">Invalid Identification, ask the user to re-validate their ID, before re-scanning</string>

    <string name="photo_face_detection">Trying to detect face on photo...</string>

    <!-- Old / unused -->
    <!--<string name="mati_client_id">5c33ca47daf37d019f184991</string>-->

    <!-- Production -->
    <string name="mati_client_id">5c4a118d5fc7fb7bfaf50507</string>

    <!-- for Testing -->
    <!--<string name="mati_client_id">5c361435cad5b4133ea945f1</string>-->

</resources>
