<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.auth.face.faceauth.login.LoginActivity">

    <ImageView
        android:layout_width="@dimen/logo_size"
        android:layout_height="@dimen/logo_size"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="16dp"
        android:src="@drawable/ic_launcher"
        tools:ignore="ContentDescription" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginTop="16dp">

        <LinearLayout
            android:id="@+id/llSignIn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="48dp"
            android:layout_marginRight="48dp"
            android:layout_marginTop="24dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16dp"
                android:text="@string/username"
                tools:ignore="SpUsage" />

            <EditText
                android:id="@+id/etUserName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:textSize="16dp"
                tools:ignore="SpUsage">

                <requestFocus />
            </EditText>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16dp"
                android:layout_marginTop="8dp"
                android:text="@string/password"
                tools:ignore="SpUsage" />

            <EditText
                android:id="@+id/etUserPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16dp"
                android:inputType="textPassword"
                android:imeOptions="actionDone"
                tools:ignore="SpUsage" />

            <TextView
                android:id="@+id/btSignIn"
                style="@style/ButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="@dimen/button_height"
                android:layout_marginTop="16dp"
                android:gravity="center"
                android:textSize="22dp"
                android:text="@string/sign_in"
                tools:ignore="SpUsage" />

            <TextView
                android:id="@+id/btRegister"
                style="@style/SecondaryButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="@dimen/button_height"
                android:layout_marginTop="16dp"
                android:gravity="center"
                android:textSize="22dp"
                android:text="@string/register"
                tools:ignore="SpUsage" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/llInfoPanel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center"
            android:visibility="gone" >

            <ProgressBar
                android:layout_width="36dp"
                android:layout_height="36dp" />

            <TextView
                android:id="@+id/tvInfoText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:textSize="22sp" />

        </LinearLayout>

    </FrameLayout>

</LinearLayout>
