<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/topLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:keepScreenOn="true"
    android:orientation="vertical">

    <com.auth.face.faceauth.qr.camera.CameraSourcePreview
        android:id="@+id/preview"
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <com.auth.face.faceauth.qr.camera.GraphicOverlay
            android:id="@+id/graphicOverlay"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </com.auth.face.faceauth.qr.camera.CameraSourcePreview>

    <TextView
        android:id="@+id/qrPrompt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/prompt_qr_scan"
        android:textSize="32dp"
        android:textStyle="bold"
        android:textColor="@android:color/white"
        tools:ignore="SpUsage" />

    <FrameLayout
        android:id="@+id/profile"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone">

        <TextView
            android:id="@+id/btClose"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:padding="8dp"
            android:text="X"
            android:textSize="36dp"
            android:textStyle="bold"
            tools:ignore="HardcodedText,RtlHardcoded,SpUsage" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="16dp"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="@dimen/profile_photo_size"
                android:layout_marginLeft="52dp"
                android:layout_marginRight="52dp"
                app:cardCornerRadius="24dp"
                app:cardElevation="10dp">

                <ImageView
                    android:id="@+id/ivPhoto"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    tools:ignore="ContentDescription" />

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_margin="16dp"
                android:layout_weight="0.6"
                app:cardCornerRadius="24dp"
                app:cardElevation="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:orientation="vertical"
                    tools:ignore="RtlHardcoded">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/label_user_name"
                            android:textSize="22dp"
                            tools:ignore="SpUsage" />

                        <TextView
                            android:id="@+id/tvName"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="4dp"
                            android:textSize="22dp"
                            android:textStyle="bold"
                            tools:ignore="SpUsage" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="4dp"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/label_user_dob"
                            android:textSize="22dp"
                            tools:ignore="SpUsage" />

                        <TextView
                            android:id="@+id/tvDob"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="4dp"
                            android:textSize="22dp"
                            android:textStyle="bold"
                            tools:ignore="SpUsage" />


                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="4dp"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/label_user_id"
                            android:textSize="22dp"
                            tools:ignore="SpUsage" />

                        <TextView
                            android:id="@+id/tvUserId"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="4dp"
                            android:textSize="22dp"
                            android:textStyle="bold"
                            tools:ignore="SpUsage" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="4dp"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/label_id"
                            android:textSize="22dp"
                            tools:ignore="SpUsage" />

                        <TextView
                            android:id="@+id/tvId"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="4dp"
                            android:textSize="16dp"
                            android:textStyle="bold"
                            tools:ignore="SpUsage" />

                    </LinearLayout>

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/profile_photo_size"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="8dp"
                android:orientation="horizontal">

                <androidx.cardview.widget.CardView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:layout_weight="1"
                    app:cardCornerRadius="24dp"
                    app:cardElevation="10dp">

                    <ImageView
                        android:id="@+id/ivDocFront"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        tools:ignore="ContentDescription" />

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:layout_weight="1"
                    app:cardCornerRadius="24dp"
                    app:cardElevation="10dp">

                    <ImageView
                        android:id="@+id/ivDocBack"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        tools:ignore="ContentDescription" />

                </androidx.cardview.widget.CardView>

            </LinearLayout>

        </LinearLayout>

    </FrameLayout>

</FrameLayout>
